[package]
name = "chokqu"
version = "0.1.0"
edition = "2024"

authors = ["Sizin Adınız <info@chokqu.com>"]
description = "Sevgi ve özenle geliştirilmekte olan bir Rust web framework'u."
license = "MIT"
homepage = "https://chokqu.com/frameworks/rust/chokqu"
repository = "https://github.com/developertugrul/chokqu-framework.git"
documentation = "https://docs.rs/chokqu"

[dependencies]
hyper = "1.6.0"
matchit = "0.8.6"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = "1.44.2"
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
